<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tang"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_tang" />
        <item
            android:id="@+id/nav_song"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_song" />
        <item
            android:id="@+id/nav_classics"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_classics" />
        
    </group>

    <item android:title="其它">
        <menu>
            <item
                android:id="@+id/nav_favorite"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_favorite" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
